# rewget

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  mkdocs.yml  specs.md
.github/workflows/: ci.yml  release.yml
Formula/: rewget.rb  rwget.rb
crates/rewget/: Cargo.toml  build.rs
crates/rewget-core/: Cargo.toml
crates/rewget-core/src/: cache.rs  chromium.rs  config.rs  detection.rs  engine.rs  error.rs  ipc.rs  lib.rs  orchestrator.rs  profile.rs  stage.rs
crates/rewget/src/: args.rs  cli.rs  daemon.rs  exec.rs  main.rs
crates/rewgetd/: Cargo.toml
crates/rewgetd/src/: impersonate.rs  main.rs  preflight.rs  server.rs
crates/rwget/: Cargo.toml  build.rs
crates/rwget-core/: Cargo.toml
crates/rwget-core/src/: cache.rs  chromium.rs  config.rs  detection.rs  engine.rs  error.rs  ipc.rs  lib.rs  profile.rs
crates/rwget/src/: args.rs  cli.rs  daemon.rs  exec.rs  main.rs
crates/rwgetd/: Cargo.toml
crates/rwgetd/src/: impersonate.rs  main.rs  preflight.rs  server.rs
docs/: architecture.md  cli.md  compliance.md  daemon.md  impersonation.md  installation.md  overview.md  roadmap.md
documentation/: architecture.md  cli-reference.md  configuration.md  contributing.md  faq.md  how-it-works.md  index.md  installation.md  mkdocs.yml  profiles.md  quickstart.md  troubleshooting.md  usage.md
documentation/docs/: architecture.md  configuration.md  contributing.md  faq.md  index.md  installation.md  quickstart.md  troubleshooting.md  usage.md
scripts/: install.sh  release.sh
