[package]
name = "rewget-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Shared library for rewget"
keywords = ["wget", "http", "download"]
categories = ["network-programming"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
which.workspace = true
dirs.workspace = true
ed25519-dalek.workspace = true
ureq.workspace = true
base64.workspace = true
sha2.workspace = true
