[package]
name = "rewget"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "A drop-in wget replacement that automatically bypasses bot protection"
keywords = ["wget", "download", "bot-detection", "tls-impersonation", "cloudflare"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "rewget"
path = "src/main.rs"

[dependencies]
rewget-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
nng.workspace = true
which.workspace = true
clap.workspace = true
clap_complete.workspace = true
mimalloc.workspace = true

[build-dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
