[package]
name = "rwget-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared library for rwget"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
which.workspace = true
dirs.workspace = true
ed25519-dalek.workspace = true
ureq.workspace = true
base64.workspace = true
sha2.workspace = true
