[package]
name = "rwget"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "wget-compatible wrapper with automatic fallback"
keywords = ["wget", "http", "download", "cli"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "rwget"
path = "src/main.rs"

[dependencies]
rwget-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
nng.workspace = true
which.workspace = true
clap.workspace = true
clap_complete.workspace = true
mimalloc.workspace = true

[build-dependencies]
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
