[package]
name = "rwgetd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"
description = "Daemon for rwget Stage 2/3 execution"
keywords = ["wget", "http", "download", "daemon"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "rwgetd"
path = "src/main.rs"

[dependencies]
rwget-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
nng.workspace = true
rquest.workspace = true
rquest-util.workspace = true
chromiumoxide.workspace = true
futures.workspace = true
mimalloc.workspace = true
